# firefly-engine

./: '  .ccls  .gitignore  .gitmodules  build.sh  compile_commands.json
.ccls-cache/@@Users@rileyfischer@Documents@dev@graphics@firefly-engine/: @Library@Developer@CommandLineTools@SDKs@MacOSX12.3.sdk@System@Library@Frameworks@Cocoa.framework@Versions@A@Headers@Cocoa.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.3.sdk@System@Library@Frameworks@GLUT.framework@Versions@A@Headers@glut.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.3.sdk@System@Library@Frameworks@Metal.framework@Versions@A@Headers@Metal.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.3.sdk@System@Library@Frameworks@OpenGL.framework@Versions@A@Headers@gl.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.3.sdk@System@Library@Frameworks@OpenGL.framework@Versions@A@Headers@glu.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.3.sdk@usr@include@AssertMacros.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.3.sdk@usr@include@Availability.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX12.3.sdk@usr@include@AvailabilityInternal.h.blob  (+704 more)
core/: CMakeLists.txt  build.sh
core/.cache/clangd/index/: file_util.cpp.3D78AEA9D6F8C299.idx  file_util.h.192EF8A3DDDA69D6.idx  main.cpp.7DD919E855DEF483.idx
core/res/: test.txt
core/src/: file_util.cpp  main.cpp
editor/: CMakeLists.txt  build.sh
editor/.cache/clangd/index/: console_panel.cpp.979EB216DFE7C8A9.idx  console_panel.h.4DC5D0E16A087E96.idx  console_panel.h.762E998E59DBEC15.idx  console_panel.h.E434F1CF0ED77F2D.idx  default.h.791AB40C4131A6BB.idx  default.h.C330AA84B2D9C808.idx  editorData.cpp.A03071F3037DB03C.idx  editorData.h.04AA367EF35AE623.idx  editorData.h.250633B59D7ADFB1.idx  editorData.h.2B92FC1EC2BB2DCA.idx  editorLayer.cpp.CF6FABA1ACABBAD8.idx  editorLayer.h.5435736257F66A3C.idx  editorLayer.h.80363D12F9762C58.idx  editorLayer.h.9CD085D7ABB5AF7C.idx  file_browser_panel.cpp.AF29248258CCB2E9.idx  file_browser_panel.h.4F29EAB0D64FFA66.idx  file_browser_panel.h.85F85E55D7561F75.idx  file_browser_panel.h.D636BD5572CB5CCE.idx  heirarchy_panel.cpp.DC159C8B23185549.idx  heirarchy_panel.h.06651A0206CA8E89.idx  heirarchy_panel.h.74AE663C7D026C2A.idx  heirarchy_panel.h.8DA463961901EA6A.idx  inspector_panel.cpp.E94F79E8F8B7C371.idx  inspector_panel.h.496CD081FB1EA71D.idx  inspector_panel.h.5E0C525EC78046F7.idx  inspector_panel.h.A2682D9A1AA906EA.idx  log_panel.cpp.C84FAE7637A01241.idx  main.cpp.72BE32E280E2833E.idx  menu_bar_panel.cpp.9D7792D86CF25DB5.idx  menu_bar_panel.h.20F3EEA57A33B126.idx  menu_bar_panel.h.9C021625CA92C09D.idx  menu_bar_panel.h.B224CFA24A1C6479.idx  viewport_panel.cpp.458BB68AE864E1A2.idx  viewport_panel.h.81C3DD940FE3A864.idx  viewport_panel.h.C9A2DDED16D9EBD2.idx  viewport_panel.h.F52431CBC616C08B.idx
editor/include/Editor/panels/: console_panel.h  file_browser_panel.h  heirarchy_panel.h  menu_bar_panel.h
editor/res/: default_shader.vert
editor/src/: editorLayer.cpp  main.cpp
editor/src/panels/: console_panel.cpp  file_browser_panel.cpp  inspector_panel.cpp
rendering/: CMakeLists.txt  build.sh
rendering/.cache/clangd/index/: framebuffer.cpp.C0628F28EB510EEB.idx  framebuffer.h.8D7119F00B818E37.idx  main.cpp.E9FC816992CCFC4F.idx  renderer.cpp.ACAE68B4A654AFD4.idx  renderer.h.F8663B1CD4451C98.idx  shader.cpp.DB9B3BE036AD8E32.idx  shader.h.CA99A4B9D606C9FA.idx  window.cpp.C4573DBEE3E52CEF.idx  window.h.B6CC6156B1583484.idx  window.h.D34DFBEA61BC9A88.idx
rendering/include/Rendering/: renderer.h  shader.h  window.h
rendering/src/: framebuffer.cpp  renderer.cpp  shader.cpp
(+431 files in other folders)
